# esp32-sensor-flow

./: Cargo.toml  README.md  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
crates/sensor_flow/: Cargo.toml
crates/sensor_flow/src/: lib.rs  window.rs
docs/: README.md
scripts/: flash.sh
src/: buttons.rs  main.rs
