[package]
name = "jarvis-idf-spike"
version = "0.1.0"
authors = ["Jeff Schilling <jeff.schilling@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"


[workspace.package]
authors = ["jeff.schilling@gmail.com"]
categories = ["esp32"]
edition = "2021"
license = "Apache-2.0"
repository = ""

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1.0.80"
async-stream = "0.3.5"
futures-core = "^0.3"
futures-util = "^0.3"
futures = "^0.3"
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43.1"
sensor-stream = { workspace = true }
tokio = { version = "1.35", features = [
    "rt",
    "macros",
    "time",
    "rt-multi-thread",
] }
pin-project-lite = "0.2"

[workspace.dependencies]
anyhow = "1.0.80"
async-stream = "0.3.5"
futures-core = "^0.3"
futures-util = "^0.3"
futures = "^0.3"
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43.1"
tokio = { version = "1.35", default-features = false }
sensor-stream = { path = "./crates/sensor_flow" }
pin-project-lite = "0.2"


[build-dependencies]
embuild = "0.31.3"

[workspace]
members = ["crates/*"]
